--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.485.0",
     "match-sorter": "^8.0.0",
@@ -28,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
